# For now, nothing much here - when we have real examples, I can show you how it works
# More likely than not, we'll have subdirectories - each subdirectory will have something like this
# if get_option( 'whatever_test-enabled' )
#   test_sources = files( 'test.cpp' )
#   dep = dependency( 'whatever-dep-is-called' )
#   test = executable( 'test',
#                       sources: [test_sources],
#                       include_directories: inc,
#                       dependencies: [ dep ]
# )
# endif